--- a/ds-modal.scss
+++ b/ds-modal.scss
@@ -1,4 +1,4 @@
-.cd-modal-overlay {
+.ds-modal-overlay {
     position: fixed;
     box-sizing: border-box;
     left: 0;
@@ -21,10 +21,10 @@
             position: relative;
             top: 50vh;
             left: 50vw;
-            height: var(--cd-modal-height);
-            width: var(--cd-modal-width);
-            margin-top: calc(var(--cd-modal-height) / -2);
-            margin-left: calc(var(--cd-modal-width) / -2);
+            height: var(--ds-modal-height);
+            width: var(--ds-modal-width);
+            margin-top: calc(var(--ds-modal-height) / -2);
+            margin-left: calc(var(--ds-modal-width) / -2);
             box-sizing: border-box;
             border-radius: 3px;
             box-shadow: 0 20px 60px -2px rgba(27, 33, 58, 0.4);
